# Copyright (C) 2019. Huawei Technologies Co., Ltd. All rights reserved.
import("//build/lite/config/test.gni")

unittest("liteos_a_security_capability_unittest") {
  output_extension = "bin"
  output_dir = "$root_out_dir/test/unittest/kernel"
  include_dirs = [
    "../../common/include",
    "../../security/capability",
    "//third_party/bounds_checking_function/include",
  ]
  sources = [
    "../../common/osTest.cpp",
    "security_capability_test.cpp",
    "smoke/cap_test_001.cpp",
  ]
  configs = [ "../..:public_config" ]
  deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
}
